Fixed minor layout issue in Interview Page.

--- a/onyx-webapp/src/main/webapp/css/style.css
+++ b/onyx-webapp/src/main/webapp/css/style.css
@@ -1479,7 +1479,7 @@ ul#interviewMenuBar li a {
   bottom:2px;
   display:inline;
   font-size:14px;
-  left:31px;
+  left:21px;
   padding-bottom:0;
   padding-left:0;
   padding-right:0;
